Fix imports and overflow

--- a/styles/board.module.scss
+++ b/styles/board.module.scss
@@ -12,6 +12,4 @@
   align-items: center;
   position: relative;
   background: #076324;
-  overflow: hidden;
-  height: 100vh;
 }
